--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,3 +19,9 @@ steps:
     arguments: 'deployments'
     secretType: 'dockerRegistry'
   name: "k8s"
+
+- task: CmdLine@2
+  inputs:
+    script: |
+      verdocker=$((curl 'https://hub.docker.com/v2/repositories/alaincpn/voteapp/tags' | jq '."results"[0]["name"]')| sed 's/\"//g')
+      echo "##vso[task.setvariable variable=verdock]$verdocker"
