--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,5 +24,5 @@ steps:
   inputs:
     script: |
       verdocker=$((curl 'https://hub.docker.com/v2/repositories/alaincpn/voteapp/tags' | jq '."results"[0]["name"]')| sed 's/\"//g')
-      echo verdocker
+      echo $verdocker
       echo "##vso[task.setvariable variable=verdock]$verdocker"
