--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,9 +20,6 @@ steps:
     secretType: 'dockerRegistry'
   name: "k8s"
 
-- task: CmdLine@2
+- task: ShellScript@2
   inputs:
-    script: |
-      verdocker=$((curl 'https://hub.docker.com/v2/repositories/alaincpn/voteapp/tags' | jq '."results"[0]["name"]')| sed 's/\"//g')
-      echo $verdocker
-      echo "##vso[task.setvariable variable=verdock]$verdocker"
+    scriptPath: qalscript.sh
