--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,6 @@ steps:
     secretType: 'dockerRegistry'
   name: "k8s"
 
-- task: Bash@3
+- task: CmdLine@2
   inputs:
-    filePath: 'qalscript.sh'
-    workingDirectory: '**/'
+    script: 'ls'
