Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,6 @@ steps:
   displayName: 'qaldeploy'
   inputs:
     action: 'deploy'
-    kubernetesServiceConnection: 'cluster-connection'
+    kubernetesServiceConnection: 'aks-connection'
     namespace: 'qal'
     manifests: 'main.yml'
