--- a/app/app.yml
+++ b/app/app.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: voteapp
-        image: alaincpn/voteapp:{{ version }}
+        image: alaincpn/voteapp:latest
         ports:
         - containerPort: 80
         resources:
