Added progress deadline

--- a/app/app.yml
+++ b/app/app.yml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: voteapplb
     spec:
+      progressDeadlineSeconds: 3600
       containers:
       - name: voteapp
         image: alaincpn/voteapp:latest
