--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ steps:
     command: 'buildAndPush'
     Dockerfile: 'Dockerfile'
     tags: |
-      $(vernew)
+      $(scrversion)
 
 #- task: KubernetesManifest@0
 #  name: qaldeploy
