--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,4 +63,4 @@ steps:
     action: 'deploy'
     kubernetesServiceConnection: 'aks-connection'
     namespace: 'qal'
-    manifests: 'app/app.yml'
+    manifests: '**/app/app.yml'
