--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,4 +60,4 @@ steps:
     action: 'deploy'
     kubernetesServiceConnection: 'aks-connection'
     namespace: 'qal'
-    manifests: '**/app/*'
+    manifests: 'app/app.yml'
