Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,9 +22,9 @@ steps:
 
 # Appel du script de récupération des variables :
 
-# - task: Bash@3
-#   inputs:
-#     filePath: 'qalscript.sh'
+- task: Bash@3
+  inputs:
+    filePath: 'qalscript.sh'
 
 # - task: Docker@2
 #   inputs:
