Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,10 @@ steps:
   inputs:
     filePath: 'qalscript.sh'
 
+- task: Bash@3
+  inputs:
+   filePath: 'auto_maj.sh'
+
 - task: Docker@2
   inputs:
     containerRegistry: 'container-connection'
