Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,7 +74,7 @@ stages:
   jobs:
   - job: qalhaspassed
     dependsOn: qaldeploy
-    condition: succeded()
+    condition: succeeded()
     steps:
       - script: echo "Qal has passed !"
   
