--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,8 @@ stages:
       inputs:
         filePath: 'qalscript.sh'
   - job: buildandpush
+    dependsOn: getversionvars
+    condition: succeeded()
     steps:
     - task: Docker@2
       inputs:
