--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ stages:
       inputs:
         filePath: 'qalscript.sh'
   - job: buildandpush
-    dependsOn: getversionvars
+    dependsOn: getversionsvars
     steps:
     - task: Docker@2
       inputs:
