--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,10 +23,29 @@ stages:
         arguments: 'deployments'
         secretType: 'dockerRegistry'
       name: "kubs"
-    - task: Bash@3
-      inputs:
-        filePath: 'qalscript.sh'
-      name: "vers"
+  - job: getvars
+    steps:
+    - checkout: none
+    - script: |
+
+        dockerhubversion=$((curl 'https://hub.docker.com/v2/repositories/alaincpn/voteapp/tags' | jq '."results"[0]["name"]')| sed 's/\"//g')
+        echo "Version sur dockerhub : "
+        echo $dockerhubversion
+        kubeoutputversion=$(echo $KUBS_KUBECTLOUTPUT | jq '.items[1].spec.template.spec.containers[].image' | cut -d: -f2 | sed 's/"//')
+        echo "Version output kubectl : "
+        echo $kubeoutputversion
+        scriptversion=$(cat azure-vote/main.py | grep -E "^ver = \"[0-9.]+\"\$"|awk -F\" {'print $2'})
+        echo "Version dans le script : "
+        echo $scriptversion
+        echo "##vso[task.setvariable variable=dockversion]$dockerhubversion"
+        echo "##vso[task.setvariable variable=kubeoutpversion]$kubeoutputversion"
+        echo "##vso[task.setvariable variable=scrversion]$scriptversion"
+        sed -i 's/{{ version }}/'$scriptversion'/g' ./app/app.yml
+
+    # - task: Bash@3
+    #   inputs:
+    #     filePath: 'qalscript.sh'
+    #   name: "vers"
 
 # Appel du script de récupération des variables dans le job getversionvars
 # qalscript.sh sur le repo
@@ -38,8 +57,8 @@ stages:
   jobs:
   - job: qaldeploy
     variables:
-      oldversion: $[ stageDependencies.Get_Versions.connectkube.outputs['vers.kubeoutpversion'] ]
-      newversion: $[ stageDependencies.Get_Versions.connectkube.outputs['vers.scrversion'] ]
+      oldversion: $[ stageDependencies.kubesetup.getvars.outputs['vers.kubeoutpversion'] ]
+      newversion: $[ stageDependencies.kubesetup.getvars.outputs['vers.scrversion'] ]
     displayName: qaldeploy
     pool:
       vmImage: ubuntu-latest 
