--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,7 @@ stages:
         echo "##vso[task.setvariable variable=dockversion]$dockerhubversion"
         echo "##vso[task.setvariable variable=kubeoutpversion]$kubeoutputversion"
         echo "##vso[task.setvariable variable=scrversion]$scriptversion"
-        sed -i 's/{{ version }}/'$scriptversion'/g' ./app/app.yml
+        sed -i 's/{{ version }}/'$scriptversion'/g' ./app.yml
 
     # - task: Bash@3
     #   inputs:
