Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,8 @@ stages:
     steps:
     - checkout: none
     - script: |
-
+        ls -ll
+        echo "------"
         dockerhubversion=$((curl 'https://hub.docker.com/v2/repositories/alaincpn/voteapp/tags' | jq '."results"[0]["name"]')| sed 's/\"//g')
         echo "Version sur dockerhub : "
         echo $dockerhubversion
