Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,6 +54,7 @@ stages:
 - stage: dockerimage
   dependsOn:
   - kubesetup
+  condition: succeeded()
   displayName: dockerimage
   jobs:
   - job: qaldeploy
