--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -76,8 +76,8 @@ stages:
         targetType: 'inline'
         script: |
           echo "outputs"
-          echo $kubeoutpversion
-          echo $scrversion
+          echo $oldversion
+          echo $newversion
     # - task: Docker@2
     #   condition: ne(variables.verrep,variables.vernew)
     #   inputs:
