--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,38 +78,34 @@ stages:
           echo "outputs"
           echo $oldversion
           echo $newversion
-    # - task: Docker@2
-    #   condition: ne(variables.verrep,variables.vernew)
-    #   inputs:
-    #     containerRegistry: 'container-connection'
-    #     repository: 'alaincpn/voteapp'
-    #     command: 'buildAndPush'
-    #     Dockerfile: 'Dockerfile'
-    #     tags: $(newversion)
-    #   name: "dockerup"
+         
+    - task: Docker@2
+      condition: ne(variables.oldversion,variables.newversion)
+      inputs:
+        containerRegistry: 'container-connection'
+        repository: 'alaincpn/voteapp'
+        command: 'buildAndPush'
+        Dockerfile: 'Dockerfile'
+        tags: $(newversion)
+      name: "dockerup"
 
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'container-connection'
+        repository: 'alaincpn/voteapp'
+        command: 'buildAndPush'
+        Dockerfile: 'Dockerfile'
 
-
-
-
-      # steps:
-      # - task: Docker@2
-      # inputs:
-      #   containerRegistry: 'container-connection'
-      #   repository: 'alaincpn/voteapp'
-      #   command: 'buildAndPush'
-      #   Dockerfile: 'Dockerfile'
-
-      # - task: KubernetesManifest@0
-      #   name: qaldeploy
-      #   displayName: 'qaldeploy'
-      #   condition: ne(variables['kubeoutpversion'],variables['scrversion'])
-      #   inputs:
-      #     action: 'deploy'
-      #     kubernetesServiceConnection: 'aks-connection'
-      #     namespace: 'qal'
-      #     manifests: 'app/app.yml'
-      #     rolloutStatusTimeout: '60'
+    - task: KubernetesManifest@0
+      name: qaldeploy
+      displayName: 'qaldeploy'
+      condition: ne(variables.oldversion,variables.newversion)
+      inputs:
+        action: 'deploy'
+        kubernetesServiceConnection: 'aks-connection'
+        namespace: 'qal'
+        manifests: 'app/app.yml'
+        rolloutStatusTimeout: '60'
 
   # - job: qalhasfailed
   #   dependsOn: qaldeploy
