--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,13 +33,13 @@ stages:
           script: |
             ls -ll
             echo "------"
-            export dockerhubversion=$((curl 'https://hub.docker.com/v2/repositories/alaincpn/voteapp/tags' | jq '."results"[0]["name"]')| sed 's/\"//g')
+            dockerhubversion=$((curl 'https://hub.docker.com/v2/repositories/alaincpn/voteapp/tags' | jq '."results"[0]["name"]')| sed 's/\"//g')
             echo "Version sur dockerhub : "
             echo $dockerhubversion
-            export kubeoutputversion=$(echo $KUBS_KUBECTLOUTPUT | jq '.items[1].spec.template.spec.containers[].image' | cut -d: -f2 | sed 's/"//')
+            kubeoutputversion=$(echo $KUBS_KUBECTLOUTPUT | jq '.items[1].spec.template.spec.containers[].image' | cut -d: -f2 | sed 's/"//')
             echo "Version output kubectl : "
             echo $kubeoutputversion
-            export scriptversion=$(cat azure-vote/main.py | grep -E "^ver = \"[0-9.]+\"\$"|awk -F\" {'print $2'})
+            scriptversion=$(cat azure-vote/main.py | grep -E "^ver = \"[0-9.]+\"\$"|awk -F\" {'print $2'})
             echo "Version dans le script : "
             echo $scriptversion
             echo "##vso[task.setvariable variable=dockversion;isOutput=true]$dockerhubversion"
@@ -76,8 +76,8 @@ stages:
         targetType: 'inline'
         script: |
           echo "outputs"
-          echo $[ stageDependencies.kubesetup.getvars.outputs['vers.kubeoutpversion'] ]
-          echo $[ stageDependencies.kubesetup.getvars.outputs['vers.scrversion'] ]
+          echo $oldversion
+          echo $newversion
          
     - task: Docker@2
       condition: ne(variables.oldversion,variables.newversion)
